added label to table

--- a/table.html
+++ b/table.html
@@ -19,7 +19,7 @@
                           Employee ID
                         </th>
                         <th scope="col" class="text-sm font-medium text-white px-6 py-4">
-                          First
+                          First Name
                         </th>
                         <th scope="col" class="text-sm font-medium text-white px-6 py-4">
                           Last
