--- a/table.html
+++ b/table.html
@@ -22,7 +22,7 @@
                           First Name
                         </th>
                         <th scope="col" class="text-sm font-medium text-white px-6 py-4">
-                          Last
+                          Last Name
                         </th>
                         <th scope="col" class="text-sm font-medium text-white px-6 py-4">
                           Job Title
