--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,30 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>AGB About</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
-	<body>
+	<body class="bg-[url('/about-bg')]">
 		<header class="text-gray-600 body-font">
-			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-				<a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-					<img src="./images/logo.png" alt="" srcset="" class="w-32 h-24" />
-				</a>
-				<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center">
-					<a class="mr-5 hover:text-gray-900 border-b-2 border-black cursor-pointer p-3" href="">About Us</a>
-				</nav>
-				<button class="inline-flex items-center bg-[#04fbeb] border-0 py-1 px-3 focus:outline-none hover:bg-[#29ddd4] rounded text-base mt-4 md:mt-0 mx-5">
+			<header class="text-gray-600 body-font">
+				<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+					<a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+						<img src="/logo" alt="AGB_logo" class="w-20 h-15" />
+					</a>
+					<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center">
+						<a class="mr-5 hover:text-gray-900 border-b-2 border-black cursor-pointer p-2" href="#">About Us</a>
+					</nav>
+				<a class="inline-flex items-center bg-[#04fbeb] border-0 py-1 px-3 focus:outline-none hover:bg-[#29ddd4] rounded text-base mt-4 md:mt-0 mx-5" href="/login">
 					Login
 					<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
 						<path d="M5 12h14M12 5l7 7-7 7"></path>
 					</svg>
-				</button>
+				</a>
 				<button class="inline-flex items-center bg-[#04fbeb] border-0 py-1 px-3 focus:outline-none hover:bg-[#29ddd4] rounded text-base mt-4 md:mt-0 mx-5">
 					Sign Up
 					<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
