created newStaff function in 'model' to allow for new staff members to be added into the database

--- a/public/login.html
+++ b/public/login.html
@@ -58,7 +58,7 @@
 						<div class="relative mb-4">
 							<label for="password" class="leading-7 text-sm">Password</label>
 							<input
-								type="text"
+								type="password"
 								id="password"
 								name="password"
 								placeholder="Password"
