--- a/public/signup.html
+++ b/public/signup.html
@@ -16,7 +16,7 @@
 					<a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
 						<img src="./images/logo.png" alt="AGB_logo" class="w-20 h-15" />
 					</a>
-					<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center">
+					<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center font-bold">
 						<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/">About Us</a>
 					</nav>
 
