added the functionality for the update operation of the website.

--- a/public/index.html
+++ b/public/index.html
@@ -19,20 +19,18 @@
 					<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center font-bold">
 						<a class="mr-5 hover:text-gray-900 border-b-2 border-black cursor-pointer p-2" href="#">About Us</a>
 					</nav>
-					<form action="/login" method="post">
-						<button class="inline-flex items-center bg-[#04fbeb] border-0 py-1 px-3 focus:outline-none hover:bg-[#29ddd4] rounded text-base mt-4 md:mt-0 mx-5" type="submit">
+						<a class="inline-flex items-center bg-[#04fbeb] border-0 py-1 px-3 focus:outline-none hover:bg-[#29ddd4] rounded text-base mt-4 md:mt-0 mx-5" type="submit" href="/login">
 							Login
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
 								<path d="M5 12h14M12 5l7 7-7 7"></path>
 							</svg>
-						</button>
-					</form>
-				<button class="inline-flex items-center bg-[#04fbeb] border-0 py-1 px-3 focus:outline-none hover:bg-[#29ddd4] rounded text-base mt-4 md:mt-0 mx-5">
+						</a>
+				<a class="inline-flex items-center bg-[#04fbeb] border-0 py-1 px-3 focus:outline-none hover:bg-[#29ddd4] rounded text-base mt-4 md:mt-0 mx-5" href="/signup">
 					Sign Up
 					<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
 						<path d="M5 12h14M12 5l7 7-7 7"></path>
 					</svg>
-				</button>
+				</a>
 			</div>
 		</header>
 		<main class=" body-font bg-[url('/about-bg')] bg-cover bg-center pb-36">
