--- a/public/signup.html
+++ b/public/signup.html
@@ -20,7 +20,7 @@
 					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/">About Us</a>
 				</nav>
 
-				<form action="/login" method="post">
+				<form action="/login" method="get">
 					<button class="inline-flex items-center bg-[#04fbeb] border-0 py-1 px-3 focus:outline-none hover:bg-[#29ddd4] rounded text-base mt-4 md:mt-0 mx-5" type="submit">
 						Login
 						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
