--- a/public/updateStaff.html
+++ b/public/updateStaff.html
@@ -53,7 +53,7 @@
 									type="text"
 									id="name"
 									name="name"
-									placeholder="Email Address"
+									placeholder="Name"
 									class="w-full bg-white rounded border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 									required
 								/>
