--- a/public/removeGoal.html
+++ b/public/removeGoal.html
@@ -6,8 +6,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Add Staff</title>
+		<title>Add Goal</title>
 		<script src="https://cdn.tailwindcss.com"></script>
+		<script src="https://unpkg.com/flowbite@1.5.4/dist/datepicker.js"></script>
 		<!-- <link rel="stylesheet" href="/styles" /> -->
 	</head>
 	<body>
@@ -32,43 +33,22 @@
 		</header>
 		<main class="text-gray-600 body-font w-full h-[86vh]">
 			<section class="bg-[url('/login-bg')] bg-cover bg-center min-h-fit h-full w-full">
-				<form action="/addStaff" method="post">
+				<form action="/add_Goal" method="post">
 					<div class="container px-5 py-24 mx-auto flex flex-wrap items-center">
-						<div class="lg:w-auto md:w-auto bg-[#0D0D0D] bg-opacity-[.45] backdrop-blur-sm rounded-lg p-8 flex flex-col md:mx-auto w-full mt-10 md:mt-0 text-white">
-							<h2 class="text-lg font-medium title-font mb-5 text-[40px]">Add Staff</h2>
+						<div class="lg:w-auto md:w-auto bg-[#0D0D0D] bg-opacity-[.45] backdrop-blur-sm rounded-lg p-8 flex flex-col md:mx-auto w-full mt-10 md:mt-0 text-white space-y-4">
+							<h2 class="text-lg font-medium title-font mb-5 text-[40px]">Remove Goal</h2>
 							<div class="relative mb-4">
-								<label for="fname" class="leading-7 text-sm">Full Name</label>
+								<label for="fname" class="leading-7 text-sm">Goal ID</label>
 								<input
 									type="text"
-									id="fname"
-									name="fname"
-									placeholder="Full Name"
+									id="goal"
+									name="goal"
+									placeholder="Goal"
 									class="w-full bg-white rounded border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 									required
 								/>
 							</div>
-							<div class="relative mb-4">
-								<label for="email" class="leading-7 text-sm">Email</label>
-								<input
-									type="text"
-									id="email"
-									name="email"
-									placeholder="Email Address"
-									class="w-full bg-white rounded border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
-									required
-								/>
-							</div>
-							<div class="relative mb-4">
-								<label for="position" class="leading-7 text-sm">Job Title</label>
-								<input
-									type="text"
-									id="position"
-									name="position"
-									placeholder="Job Title"
-									class="w-full bg-white rounded border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
-									required
-								/>
-							</div>
+
 							<button class="text-white bg-[#2cccc4] border-0 py-2 px-8 focus:outline-none hover:bg-[#3b9394] rounded text-lg" type="submit">Submit</button>
 						</div>
 					</div>
