created the remove goals page and added functionality

--- a/public/removeGoal.html
+++ b/public/removeGoal.html
@@ -33,7 +33,7 @@
 		</header>
 		<main class="text-gray-600 body-font w-full h-[86vh]">
 			<section class="bg-[url('/login-bg')] bg-cover bg-center min-h-fit h-full w-full">
-				<form action="/add_Goal" method="post">
+				<form action="/remove_Goal" method="post">
 					<div class="container px-5 py-24 mx-auto flex flex-wrap items-center">
 						<div class="lg:w-auto md:w-auto bg-[#0D0D0D] bg-opacity-[.45] backdrop-blur-sm rounded-lg p-8 flex flex-col md:mx-auto w-full mt-10 md:mt-0 text-white space-y-4">
 							<h2 class="text-lg font-medium title-font mb-5 text-[40px]">Remove Goal</h2>
@@ -41,8 +41,8 @@
 								<label for="fname" class="leading-7 text-sm">Goal ID</label>
 								<input
 									type="text"
-									id="goal"
-									name="goal"
+									id="id"
+									name="id"
 									placeholder="Goal"
 									class="w-full bg-white rounded border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 									required
