added category options to all the crud pages

--- a/public/updateGoal.html
+++ b/public/updateGoal.html
@@ -49,6 +49,18 @@
 								/>
 							</div>
 							<div class="relative mb-4">
+								<label for="category" class="leading-7 text-sm">Category</label>
+								<select
+									id="category"
+									name="category"
+									class="w-full bg-white rounded border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-600 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+								>
+									<option value="fitness">Fitness</option>
+									<option value="nutrition">Nutrition</option>
+									<option value="mental_health">Mental Health</option>
+								</select>
+							</div>
+							<div class="relative mb-4">
 								<label for="fname" class="leading-7 text-sm">Goal</label>
 								<input
 									type="text"
