--- a/public/removeGoal.html
+++ b/public/removeGoal.html
@@ -48,6 +48,18 @@
 									required
 								/>
 							</div>
+							<div class="relative mb-4">
+								<label for="category" class="leading-7 text-sm">Category</label>
+								<select
+									id="category"
+									name="category"
+									class="w-full bg-white rounded border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-600 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+								>
+									<option value="fitness">Fitness</option>
+									<option value="nutrition">Nutrition</option>
+									<option value="mental_health">Mental Health</option>
+								</select>
+							</div>
 
 							<button class="text-white bg-[#2cccc4] border-0 py-2 px-8 focus:outline-none hover:bg-[#3b9394] rounded text-lg" type="submit">Submit</button>
 						</div>
