--- a/public/wellness.html
+++ b/public/wellness.html
@@ -21,7 +21,7 @@
 					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/manager">Staff</a>
 				</nav>
 
-				<a class="inline-flex items-center border-0 py-1 px-3 focus:outline-none rounded text-base mt-4 md:mt-0 mx-5 bg-[#04fbeb] hover:bg-[#29ddd4]" href="/">
+				<a class="inline-flex items-center border-0 py-1 px-3 focus:outline-none rounded text-base mt-4 md:mt-0 mx-5 bg-[#04fbeb] hover:bg-[#29ddd4]" href="/logout">
 					Log Out
 					<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
 						<path d="M5 12h14M12 5l7 7-7 7"></path>
