update the crud functionalities to match the new model

--- a/public/addStaff.html
+++ b/public/addStaff.html
@@ -75,5 +75,9 @@
 				</form>
 			</section>
 		</main>
+		<footer class="flex">
+			<!-- Copyright -->
+			<p class="mx-auto font-bold">&copy AGB 2022</p>
+		</footer>
 	</body>
 </html>
