--- a/public/wellness.html
+++ b/public/wellness.html
@@ -105,5 +105,9 @@
 				</div>
 			</section>
 		</main>
+		<footer class="flex">
+			<!-- Copyright -->
+			<p class="mx-auto font-bold">&copy AGB 2022</p>
+		</footer>
 	</body>
 </html>
