--- a/public/addGoal.html
+++ b/public/addGoal.html
@@ -104,5 +104,9 @@
 				</form>
 			</section>
 		</main>
+		<footer class="flex">
+			<!-- Copyright -->
+			<p class="mx-auto font-bold">&copy AGB 2022</p>
+		</footer>
 	</body>
 </html>
