--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,9 @@
 				</div>
 			</div>
 		</main>
+		<footer class="flex">
+			<!-- Copyright -->
+			<p class="mx-auto font-bold">&copy AGB 2022</p>
+		</footer>
 	</body>
 </html>
