--- a/public/removeGoal.html
+++ b/public/removeGoal.html
@@ -67,5 +67,9 @@
 				</form>
 			</section>
 		</main>
+		<footer class="flex">
+			<!-- Copyright -->
+			<p class="mx-auto font-bold">&copy AGB 2022</p>
+		</footer>
 	</body>
 </html>
