--- a/public/updateStaff.html
+++ b/public/updateStaff.html
@@ -75,5 +75,9 @@
 				</form>
 			</section>
 		</main>
+		<footer class="flex">
+			<!-- Copyright -->
+			<p class="mx-auto font-bold">&copy AGB 2022</p>
+		</footer>
 	</body>
 </html>
