--- a/public/addGoal.html
+++ b/public/addGoal.html
@@ -19,8 +19,8 @@
 				</a>
 				<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center font-bold">
 					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/">About Us</a>
-					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/wellness">Wellness</a>
-					<a class="mr-5 hover:text-gray-900 border-b-2 border-black cursor-pointer p-2" href="/manager">Staff</a>
+					<a class="mr-5 hover:text-gray-900 border-b-2 border-black cursor-pointer p-2" href="/wellness">Wellness</a>
+					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/manager">Staff</a>
 				</nav>
 
 				<a class="inline-flex items-center border-0 py-1 px-3 focus:outline-none rounded text-base mt-4 md:mt-0 mx-5 bg-[#04fbeb] hover:bg-[#29ddd4]" href="/">
