fixed linking of static images

--- a/public/wellness.html
+++ b/public/wellness.html
@@ -6,14 +6,14 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Manager View</title>
+		<title>Staff Wellness</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
 	<body>
 		<header class="text-gray-600 body-font">
 			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
 				<a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-					<img src="/logo" alt="AGB_logo" class="w-20 h-15" />
+					<img src="./images/logo.png" alt="AGB_logo" class="w-20 h-15" />
 				</a>
 				<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center font-bold">
 					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/">About Us</a>
@@ -41,7 +41,7 @@
 			</section>
 			<section class="space-y-5">
 				<!-- Fitness section -->
-				<div class="bg-[url('./fitness_1')] bg-cover bg-center w-fit h-fit rounded-md p-28">
+				<div class="bg-[url('./images/fitness.jpg')] bg-cover bg-center w-fit h-fit rounded-md p-28">
 					<div class="bg-slate-400 bg-opacity-50 rounded-md p-10 backdrop-blur-md">
 						<div class="flex flex-col space-y-5">
 							<h2 class="text-2xl mx-auto text-white font-bold">Fitness</h2>
@@ -63,7 +63,7 @@
 				<div class="grid lg:grid-cols-2 grid-cols-1 gap-5">
 					<!-- Nutrition -->
 					<div>
-						<div class="bg-[url('./nutrition_1')] bg-cover bg-center w-fit h-fit rounded-md p-28">
+						<div class="bg-[url('./images/nutrition.jpg')] bg-cover bg-center w-fit h-fit rounded-md p-28">
 							<div class="bg-slate-400 bg-opacity-50 rounded-md p-10 backdrop-blur-md">
 								<div class="flex flex-col space-y-5">
 									<h2 class="text-2xl mx-auto text-white font-bold">Nutrition</h2>
@@ -83,7 +83,7 @@
 					</div>
 					<!--  Mental Health  -->
 					<div>
-						<div class="bg-[url('./mental_health_1')] bg-cover bg-center w-full h-full rounded-md flex py-10 lg:py-0">
+						<div class="bg-[url('./images/mentalHealth.jpg')] bg-cover bg-center w-full h-full rounded-md flex py-10 lg:py-0">
 							<div class="bg-slate-400 bg-opacity-50 rounded-md p-10 mx-16 my-auto backdrop-blur-md">
 								<div class="flex flex-col space-y-5">
 									<h2 class="text-2xl mx-auto text-white font-bold">Mental Health</h2>
