--- a/public/manager.html
+++ b/public/manager.html
@@ -13,7 +13,7 @@
 		<header class="text-gray-600 body-font">
 			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
 				<a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-					<img src="/logo" alt="AGB_logo" class="w-20 h-15" />
+					<img src="./images/logo.png" alt="AGB_logo" class="w-20 h-15" />
 				</a>
 				<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center font-bold">
 					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/about">About Us</a>
