--- a/public/removeStaff.html
+++ b/public/removeStaff.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Login Page</title>
+		<title>Remove Staff</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<!-- <link rel="stylesheet" href="/styles" /> -->
 	</head>
@@ -14,7 +14,7 @@
 		<header class="text-gray-600 body-font">
 			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
 				<a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-					<img src="/logo" alt="AGB_logo" class="w-20 h-15" />
+					<img src="./images/logo.png" alt="AGB_logo" class="w-20 h-15" />
 				</a>
 				<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center font-bold">
 					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/">About Us</a>
@@ -31,7 +31,7 @@
 			</div>
 		</header>
 		<main class="text-gray-600 body-font w-full h-[86vh]">
-			<section class="bg-[url('/login-bg')] bg-cover bg-center min-h-fit h-full w-full">
+			<section class="bg-[url('./images/Mobile-login-Cristina.jpg')] bg-cover bg-center min-h-fit h-full w-full">
 				<form action="/removeStaff" method="post">
 					<div class="container px-5 py-24 mx-auto flex flex-wrap items-center">
 						<div class="lg:w-auto md:w-auto bg-[#0D0D0D] bg-opacity-[.45] backdrop-blur-sm rounded-lg p-8 flex flex-col md:mx-auto w-full mt-10 md:mt-0 text-white">
