added logged in user about us page and placed a link in all relevant pages that have access to it

--- a/public/addGoal.html
+++ b/public/addGoal.html
@@ -18,7 +18,7 @@
 					<img src="./images/logo.png" alt="AGB_logo" class="w-20 h-15" />
 				</a>
 				<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center font-bold">
-					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/">About Us</a>
+					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/about">About Us</a>
 					<a class="mr-5 hover:text-gray-900 border-b-2 border-black cursor-pointer p-2" href="/wellness">Wellness</a>
 					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/manager">Staff</a>
 				</nav>
